# PolyMarketScraper

./: README.md  database.py  events.db  helper.py  pyproject.toml  requirements.txt  test.py
events/: README.md  contract.py  interface.py  local.py  web.py
prices/: interface.py  local.py  web.py
tags/: interface.py  local.py  web.py
utils/: dates.py
